[tool.poetry]
name = "pysg"
version = "0.1.0"
description = ""
authors = ["Ruidy <ruidy.nemausat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
jinja2 = "^3.1.5"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
